test/libsolidity/syntaxTests/nameAndTypeResolution/storage_location_non_array_or_struct_disallowed_is_not_fatal.sol
contract C {
    function f(uint storage a) public {
        a = f;
    }
}
// ----
// TypeError: (28-42): Data location can only be given for array or struct types.
